--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -11,7 +11,7 @@
 	position: relative;
 }
 .project_list li a {
-	display: block;  /* span 에 컬러를 주어 블럭처리 */
+	display: block;
 	width: 425px;
 	height: 294px;
 	margin-bottom: 27px;
